--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ak.pesgm">
+    package="io.ak.pesgm">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -15,15 +15,15 @@
         android:resource="@color/colorAccent" />
 
     <application
-        android:name=".app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:name="io.ak.pesgm.app.App"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pesgm">
         <activity
-            android:name=".SplashActivity"
+            android:name="io.ak.pesgm.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,12 +32,12 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name="io.ak.pesgm.MainActivity"
             android:exported="true">
         </activity>
 
         <service
-            android:name=".app.FirebaseService"
+            android:name="io.ak.pesgm.app.FirebaseService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
