--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.vipulasri:timelineview:1.1.5'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'com.github.shts:StoriesProgressView:3.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
