--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pesgm">
         <activity
-            android:name=".StoriesActivity"
-            android:theme="@style/Theme.NoActionbar"
+            android:name=".YearDetailActivity"
             android:exported="false" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".StoriesActivity"
+            android:exported="false"
+            android:theme="@style/Theme.NoActionbar" />
         <activity
             android:name=".SplashActivity"
             android:exported="true">
@@ -37,7 +43,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
 
         <service
             android:name=".app.FirebaseService"
