--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.github.vipulasri:timelineview:1.1.5'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'com.github.shts:StoriesProgressView:3.0.0'
+    implementation 'com.github.MikeOrtiz:TouchImageView:3.2.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
